[gd_scene load_steps=23 format=3 uid="uid://hw4ptguhafc2"]

[ext_resource type="Script" path="res://src/hill/Hill.gd" id="1_gvjqd"]
[ext_resource type="PackedScene" uid="uid://5xj424mtfb2c" path="res://src/player/Player.tscn" id="1_uk50o"]
[ext_resource type="Texture2D" uid="uid://bw3rkf5r41x0m" path="res://gfx/background/sprHillAndCastle.png" id="2_wrlpw"]
[ext_resource type="AudioStream" uid="uid://dvnq4oupqis3h" path="res://music/hill.ogg" id="3_qwrm7"]
[ext_resource type="PackedScene" uid="uid://bwq3ioy57pl72" path="res://src/spawner/Spawner.tscn" id="4_lf6ov"]
[ext_resource type="Texture2D" uid="uid://bk4m4tj1qc13u" path="res://gfx/background/sprFlag.png" id="6_feyi6"]
[ext_resource type="Script" path="res://src/hill/Flag.gd" id="7_t7kat"]
[ext_resource type="PackedScene" uid="uid://cved2u6ry8jgb" path="res://src/crowd/Crowd.tscn" id="8_weqfq"]
[ext_resource type="Script" path="res://src/hill/CastleProgress.gd" id="9_sdfd1"]
[ext_resource type="Script" path="res://src/hill/FlavorProgress.gd" id="10_twt0l"]
[ext_resource type="Texture2D" uid="uid://bm8q1n1isu1l8" path="res://gfx/hill/jemSmol.png" id="11_d35mt"]
[ext_resource type="Texture2D" uid="uid://dho2t42o3h0wt" path="res://gfx/hill/cheeseSmol.png" id="12_lgjs0"]
[ext_resource type="Texture2D" uid="uid://dv0tdhng6kb77" path="res://gfx/hill/castleSmol.png" id="13_fl1u7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r7iek"]
atlas = ExtResource("6_feyi6")
region = Rect2(0, 0, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6xoe"]
atlas = ExtResource("6_feyi6")
region = Rect2(18, 0, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dcud"]
atlas = ExtResource("6_feyi6")
region = Rect2(36, 0, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_agbyh"]
atlas = ExtResource("6_feyi6")
region = Rect2(54, 0, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lgd6"]
atlas = ExtResource("6_feyi6")
region = Rect2(72, 0, 18, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_mil10"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7iek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6xoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dcud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agbyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lgd6")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="Curve2D" id="Curve2D_odd3h"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -109, 343, 0, 0, 0, 0, 54, 49)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_8o62n"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 115, 7, 0, 0, 0, 0, 7, 46, 0, 0, 0, 0, 8, 75, 0, 0, 0, 0, 143, 23, 0, 0, 0, 0, 164, 43, 0, 0, 0, 0, 13, 107)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_y66jv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 711, 4, 0, 0, 0, 0, 714, 154)
}
point_count = 2

[node name="Hill" type="StaticBody2D"]
script = ExtResource("1_gvjqd")

[node name="Background" type="ColorRect" parent="."]
z_index = -100
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.690196, 0.85098, 0.984314, 1)

[node name="CloudGroup" type="CanvasGroup" parent="."]

[node name="Castle" type="Sprite2D" parent="."]
position = Vector2(640, 55)
texture = ExtResource("2_wrlpw")
centered = false
offset = Vector2(-203, 0)

[node name="Flag" type="AnimatedSprite2D" parent="Castle"]
position = Vector2(-74, -3)
sprite_frames = SubResource("SpriteFrames_mil10")
frame_progress = 0.919716
centered = false
script = ExtResource("7_t7kat")

[node name="Player" parent="." instance=ExtResource("1_uk50o")]
position = Vector2(312, 176)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(1, 1, 114, 0, 640, 265, 640, 357, 0, 359, 0, 8, -661, -29, -743, 1005, 1317, 902, 1221, -504, -689, -470, -699, 195)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qwrm7")
volume_db = -10.0

[node name="Spawner" parent="." instance=ExtResource("4_lf6ov")]

[node name="SpawnPath" type="Path2D" parent="."]
position = Vector2(761, 323)
curve = SubResource("Curve2D_odd3h")

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnPath"]
position = Vector2(-109, 343)
rotation = -1.06456

[node name="Crowd" parent="." instance=ExtResource("8_weqfq")]
position = Vector2(59, 47)

[node name="RunnerSpawnPath" type="Path2D" parent="."]
position = Vector2(-54, -37)
curve = SubResource("Curve2D_8o62n")

[node name="RunnerSpawnLocation" type="PathFollow2D" parent="RunnerSpawnPath"]
position = Vector2(115, 7)
rotation = 2.79505

[node name="CastleTimer" type="Timer" parent="."]
wait_time = 100.0
one_shot = true
autostart = true

[node name="CloudSpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_y66jv")

[node name="CloudSpawnLocation" type="PathFollow2D" parent="CloudSpawnPath"]
position = Vector2(711, 4)
rotation = 1.5508

[node name="InitialJumpTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 238.0
offset_top = 6.0
offset_right = 278.0
offset_bottom = 46.0
scale = Vector2(4.23248, 2.21187)
size_flags_horizontal = 3

[node name="Container" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.883083, 1.13514)
theme_override_constants/separation = 3

[node name="CastleProgressBar" type="ProgressBar" parent="Control/Container"]
layout_mode = 2
show_percentage = false
script = ExtResource("9_sdfd1")

[node name="FlavorProgressBar" type="ProgressBar" parent="Control/Container"]
layout_mode = 2
show_percentage = false
script = ExtResource("10_twt0l")

[node name="Jem" type="Sprite2D" parent="."]
position = Vector2(240, 22)
texture = ExtResource("11_d35mt")

[node name="CastleSmol" type="Sprite2D" parent="."]
position = Vector2(385, 7)
texture = ExtResource("13_fl1u7")

[node name="King" type="Sprite2D" parent="."]
position = Vector2(240, 9)
texture = ExtResource("12_lgjs0")
